[gd_scene load_steps=53 format=2]

[ext_resource path="res://objects/player/Klengan.gd" type="Script" id=1]
[ext_resource path="res://objects/mechanics/finite_state_machine/KlenganStateController.gd" type="Script" id=2]
[ext_resource path="res://objects/mechanics/finite_state_machine/states_klengan/movement/idle.gd" type="Script" id=3]
[ext_resource path="res://objects/mechanics/finite_state_machine/states_klengan/movement/move.gd" type="Script" id=4]
[ext_resource path="res://objects/mechanics/finite_state_machine/states_klengan/movement/jump.gd" type="Script" id=5]
[ext_resource path="res://objects/mechanics/finite_state_machine/states_klengan/stagger/stagger.gd" type="Script" id=6]
[ext_resource path="res://resources/sprites/klengan/walkcycle/walk_00.png" type="Texture" id=7]
[ext_resource path="res://resources/sprites/klengan/walkcycle/walk_01.png" type="Texture" id=8]
[ext_resource path="res://resources/sprites/klengan/walkcycle/walk_02.png" type="Texture" id=9]
[ext_resource path="res://resources/sprites/klengan/walkcycle/walk_03.png" type="Texture" id=10]
[ext_resource path="res://resources/sprites/klengan/walkcycle/walk_04.png" type="Texture" id=11]
[ext_resource path="res://resources/sprites/klengan/walkcycle/walk_05.png" type="Texture" id=12]
[ext_resource path="res://resources/sprites/klengan/walkcycle/walk_06.png" type="Texture" id=13]
[ext_resource path="res://resources/sprites/klengan/walkcycle/walk_07.png" type="Texture" id=14]
[ext_resource path="res://resources/sprites/klengan/walkcycle/walk_08.png" type="Texture" id=15]
[ext_resource path="res://resources/sprites/klengan/walkcycle/walk_09.png" type="Texture" id=16]
[ext_resource path="res://objects/player/CanvasLayer.gd" type="Script" id=17]
[ext_resource path="res://resources/mobilebuttons/original/RightUnpressed.png" type="Texture" id=18]
[ext_resource path="res://resources/mobilebuttons/original/RightPressed.png" type="Texture" id=19]
[ext_resource path="res://resources/mobilebuttons/original/LeftUnpressed.png" type="Texture" id=20]
[ext_resource path="res://resources/mobilebuttons/original/LeftPressed.png" type="Texture" id=21]
[ext_resource path="res://resources/mobilebuttons/original/EnterUnpressed.png" type="Texture" id=22]
[ext_resource path="res://resources/mobilebuttons/original/EnterPressed.png" type="Texture" id=23]
[ext_resource path="res://resources/mobilebuttons/original/JumpPressed.png" type="Texture" id=24]
[ext_resource path="res://resources/sprites/ui/dialoguebox.png" type="Texture" id=25]
[ext_resource path="res://addons/adbox/DialogueBox.gd" type="Script" id=26]
[ext_resource path="res://resources/audio/text_beep.wav" type="AudioStream" id=27]
[ext_resource path="res://resources/font/PressStart2P.ttf" type="DynamicFontData" id=28]
[ext_resource path="res://resources/ktg_theme.tres" type="Theme" id=29]
[ext_resource path="res://sprites/test/heart_empty.png" type="Texture" id=30]
[ext_resource path="res://sprites/test/heart_outline.png" type="Texture" id=31]
[ext_resource path="res://sprites/test/heart_full.png" type="Texture" id=32]
[ext_resource path="res://sprites/test/heart_light.png" type="Texture" id=33]
[ext_resource path="res://sprites/test/stabilodash.png" type="Texture" id=34]
[ext_resource path="res://sprites/test/stabilodash_full.png" type="Texture" id=35]
[ext_resource path="res://resources/shader/blur.shader" type="Shader" id=36]
[ext_resource path="res://resources/shader/white.png" type="Texture" id=37]
[ext_resource path="res://scenes/Krebshilfe.tscn" type="PackedScene" id=38]
[ext_resource path="res://objects/mechanics/finite_state_machine/states_klengan/movement/attack.gd" type="Script" id=39]
[ext_resource path="res://resources/sprites/klengan/attackcycle/attack_00.png" type="Texture" id=40]
[ext_resource path="res://resources/sprites/klengan/attackcycle/attack_01.png" type="Texture" id=41]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34.3377, 6.71835 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 14.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 41 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24.9137, 10 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 28 )

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "go_to_Menu"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Pause:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Pause")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "show"
} ]
}

[sub_resource type="Animation" id=8]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Pause:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Pause")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hide"
} ]
}

[sub_resource type="Animation" id=9]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Pause/Panel/PauseMenu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Pause/Panel/PauseMenu")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hide"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Pause/Panel/Settings")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "show"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pause/Panel/Settings:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Pause/Panel/PauseMenu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Pause/Panel/PauseMenu")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "show"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Pause/Panel/Settings")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hide"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pause/Panel/Settings:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 36 )
shader_param/amount = 2.647

[node name="Klengan" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0.0434299, 81.9697 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, 1 )
scale = Vector2( 4, 4 )
frames = SubResource( 2 )
animation = "attack"

[node name="AttackArea" type="Area2D" parent="AnimatedSprite"]
position = Vector2( 12, 0 )
collision_layer = 0
collision_mask = 8

[node name="AttackCollision" type="CollisionShape2D" parent="AnimatedSprite/AttackArea"]
shape = SubResource( 3 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -50 )
current = true
smoothing_enabled = true

[node name="InteractionArea" type="Area2D" parent="."]
position = Vector2( 0, 90 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2( 3.41373, -11.2166 )
shape = SubResource( 4 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
START_STATE = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Talk" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 39 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 17 )

[node name="Arrows" type="Control" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -120.0
margin_right = 265.0
margin_bottom = -21.0

[node name="Right" type="TouchScreenButton" parent="CanvasLayer/Arrows"]
position = Vector2( 150, 0 )
scale = Vector2( 5, 5 )
normal = ExtResource( 18 )
pressed = ExtResource( 19 )
action = "walk_right"

[node name="Left" type="TouchScreenButton" parent="CanvasLayer/Arrows"]
position = Vector2( 35, 0 )
scale = Vector2( 5, 5 )
normal = ExtResource( 20 )
pressed = ExtResource( 21 )
action = "walk_left"

[node name="Interaction" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -271.0
margin_top = -120.0
margin_right = -40.0
margin_bottom = -18.0

[node name="Okay" type="TouchScreenButton" parent="CanvasLayer/Interaction"]
position = Vector2( 35, 0 )
scale = Vector2( 5, 5 )
normal = ExtResource( 22 )
pressed = ExtResource( 23 )
action = "accept"

[node name="Up" type="TouchScreenButton" parent="CanvasLayer/Interaction"]
position = Vector2( 150, 0 )
scale = Vector2( 5, 5 )
normal = ExtResource( 24 )
pressed = ExtResource( 24 )
action = "jump"

[node name="DialogueBox" type="NinePatchRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
margin_left = 173.0
margin_top = 50.0
margin_right = -168.0
margin_bottom = 240.0
texture = ExtResource( 25 )
region_rect = Rect2( -2.28871, -3.69064, 28.5712, 30.4968 )
patch_margin_left = 8
patch_margin_top = 10
patch_margin_right = 12
patch_margin_bottom = 13
script = ExtResource( 26 )
message_sound = ExtResource( 27 )
font = SubResource( 5 )
action_name = "accept"
wait_time = 0.05

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="CanvasLayer/UI"]
margin_left = 20.0
margin_top = 10.0
margin_right = 212.0
margin_bottom = 26.0
theme = ExtResource( 29 )
text = "score: 00000"

[node name="Pause" type="Button" parent="CanvasLayer/UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -107.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 95.0
focus_mode = 0
enabled_focus_mode = 0
text = "||"

[node name="Health" type="TextureProgress" parent="CanvasLayer/UI"]
margin_left = 16.0
margin_top = 41.0
margin_right = 31.0
margin_bottom = 54.0
rect_scale = Vector2( 5, 5 )
value = 30.0
texture_under = ExtResource( 30 )
texture_over = ExtResource( 31 )
texture_progress = ExtResource( 32 )
fill_mode = 4

[node name="heart_light" type="Sprite" parent="CanvasLayer/UI/Health"]
show_behind_parent = true
position = Vector2( 7.28657, 6.32776 )
scale = Vector2( 0.145363, 0.139511 )
texture = ExtResource( 33 )

[node name="StabiloDash" type="TextureProgress" parent="CanvasLayer/UI"]
anchor_bottom = 1.0
margin_left = 41.0
margin_top = 130.0
margin_right = 46.0
margin_bottom = -430.0
rect_scale = Vector2( 5, 5 )
value = 80.0
texture_under = ExtResource( 34 )
texture_progress = ExtResource( 35 )
fill_mode = 3

[node name="PauseMenu" type="AnimationPlayer" parent="CanvasLayer"]
anims/backtomenu = SubResource( 6 )
anims/in = SubResource( 7 )
anims/out = SubResource( 8 )
anims/settings_in = SubResource( 9 )
anims/settings_out = SubResource( 10 )

[node name="CanvasModulate" type="CanvasModulate" parent="CanvasLayer"]

[node name="Pause" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 29 )

[node name="Blur" type="TextureRect" parent="CanvasLayer/Pause"]
material = SubResource( 11 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 37 )
expand = true

[node name="Panel" type="Panel" parent="CanvasLayer/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -246.0
margin_top = -186.0
margin_right = 247.0
margin_bottom = 155.0
rect_min_size = Vector2( 300, 200 )

[node name="PauseMenu" type="VBoxContainer" parent="CanvasLayer/Pause/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Back" type="Button" parent="CanvasLayer/Pause/Panel/PauseMenu"]
margin_top = 56.0
margin_right = 493.0
margin_bottom = 110.0
focus_neighbour_top = NodePath("../BackToMenu")
text = "Zurück zum Spiel"

[node name="Save" type="Button" parent="CanvasLayer/Pause/Panel/PauseMenu"]
margin_top = 114.0
margin_right = 493.0
margin_bottom = 168.0
text = "Speichern"

[node name="Settings" type="Button" parent="CanvasLayer/Pause/Panel/PauseMenu"]
margin_top = 172.0
margin_right = 493.0
margin_bottom = 226.0
text = "Einstellungen"

[node name="BackToMenu" type="Button" parent="CanvasLayer/Pause/Panel/PauseMenu"]
margin_top = 230.0
margin_right = 493.0
margin_bottom = 284.0
focus_neighbour_bottom = NodePath("../Back")
text = "Zurück zum Menü"

[node name="Settings" type="VBoxContainer" parent="CanvasLayer/Pause/Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Musik" type="Button" parent="CanvasLayer/Pause/Panel/Settings"]
margin_top = 27.0
margin_right = 493.0
margin_bottom = 81.0
toggle_mode = true
pressed = true
text = "Musik: an"

[node name="SFX" type="Button" parent="CanvasLayer/Pause/Panel/Settings"]
margin_top = 85.0
margin_right = 493.0
margin_bottom = 139.0
toggle_mode = true
pressed = true
text = "SFX: an"

[node name="Rumble" type="Button" parent="CanvasLayer/Pause/Panel/Settings"]
margin_top = 143.0
margin_right = 493.0
margin_bottom = 197.0
toggle_mode = true
pressed = true
text = "Controller-Rumble: an"

[node name="Donations" type="Button" parent="CanvasLayer/Pause/Panel/Settings"]
margin_top = 201.0
margin_right = 493.0
margin_bottom = 255.0
toggle_mode = true
pressed = true
text = "Spendenaufruf: an"

[node name="Back" type="Button" parent="CanvasLayer/Pause/Panel/Settings"]
margin_top = 259.0
margin_right = 493.0
margin_bottom = 313.0
text = "Zurück"

[node name="Krebshilfe" parent="CanvasLayer/Pause" instance=ExtResource( 38 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -118.0
margin_bottom = 0.0
[connection signal="animation_finished" from="AnimatedSprite" to="StateMachine" method="_on_animation_finished"]
[connection signal="area_entered" from="InteractionArea" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_Area2D_area_exited"]
[connection signal="dialogue_exit" from="CanvasLayer/DialogueBox" to="StateMachine/Talk" method="_on_DialogueBox_dialogue_exit"]
[connection signal="dialogue_exit" from="CanvasLayer/DialogueBox" to="." method="_on_DialogueBox_dialogue_exit"]
[connection signal="pressed" from="CanvasLayer/UI/Pause" to="CanvasLayer" method="trigger_pause"]
[connection signal="pressed" from="CanvasLayer/Pause/Panel/PauseMenu/Back" to="CanvasLayer" method="trigger_pause"]
[connection signal="pressed" from="CanvasLayer/Pause/Panel/PauseMenu/Save" to="CanvasLayer" method="_on_Save_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause/Panel/PauseMenu/Settings" to="CanvasLayer" method="_on_Settings_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause/Panel/PauseMenu/BackToMenu" to="CanvasLayer" method="_on_BackToMenu_pressed"]
[connection signal="toggled" from="CanvasLayer/Pause/Panel/Settings/Donations" to="CanvasLayer" method="_on_Donations_toggled"]
[connection signal="pressed" from="CanvasLayer/Pause/Panel/Settings/Back" to="CanvasLayer" method="_on_BackToPause_pressed"]
